<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingStart="16dp"
    android:paddingRight="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".FirstActivity">

    <LinearLayout
        android:id="@+id/firstLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <EditText
            android:id="@+id/edFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/first_name"
            android:inputType="textCapWords"/>

        <EditText
            android:id="@+id/edMiddleName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/middle_name"
            android:inputType="textCapWords"/>

        <EditText
            android:id="@+id/edLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/last_name"
            android:inputType="textCapWords"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_viewgroups_top"
        android:orientation="vertical"
        android:baselineAligned="false">

        <RelativeLayout
            android:id="@+id/firstRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_parent_top_bottom"
            android:paddingLeft="@dimen/padding_parent_left_right"
            android:paddingStart="@dimen/padding_parent_left_right"
            android:paddingRight="@dimen/padding_parent_left_right"
            android:paddingEnd="@dimen/padding_parent_left_right"
            android:paddingBottom="@dimen/padding_parent_top_bottom">

            <TextView
                android:id="@+id/txtPhoneNumberLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/edPhoneNumber"
                android:text="@string/phoneNumberLabel"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/spnPhoneCountryCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtPhoneNumberLabel"
                android:layout_alignBottom="@id/edPhoneNumber"
                android:entries="@array/array_phone_country_codes"/>

            <EditText
                android:id="@+id/edPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtPhoneNumberLabel"
                android:layout_toRightOf="@id/spnPhoneCountryCode"
                android:layout_toEndOf="@id/spnPhoneCountryCode"
                android:layout_marginTop="5dp"
                android:hint="@string/phone_number"
                android:inputType="phone"/>
        </RelativeLayout>

    </LinearLayout>

    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/helloWorld"/>
    </LinearLayout>
    -->
</LinearLayout>